# openmx-container

./: .gitignore  README.md  RESOURCES.md  Si8_test.cif  Si8_test.xyz  aliases.json  benchmark_results.md  build_notes.md  omx-db  omx-gen  openmx4.0.def  openmx4.0_intel.def  pyproject.toml  tuning_guide.md  v4_container_notes.md
omx_tools/: _utils.py  database.py  generator.py  intent.py  omp2vasp.py  vasp2omx.py
omx_tools/mapping/: __init__.py
omx_tools/parsers/: __init__.py  openmx.py  vasp.py
omx_tools/schemas/: keywords.json  templates.json  vasp_to_ase.json
omx_tools/writers/: __init__.py  openmx.py  vasp.py
openmx4.0/source/: Allocate_Arrays.c  Allocate_DM_for_LPQ.c  BandDispersion.c  Band_DFT_Col.c  Band_DFT_Col_CWF.c  Band_DFT_Col_Optical_ScaLAPACK.c  Band_DFT_Dosout.c  Band_DFT_NonCol.c  Band_DFT_NonCol_CWF.c  Band_DFT_NonCol_DMmu.c  CWF2W90.c  Calc_OLPexp.c  Calc_optical.c  Cluster_DFT_Col.c  Cluster_DFT_Col_CWF.c  Cluster_DFT_Col_DMmu.c  Cluster_DFT_NonCol.c  Cluster_DFT_NonCol_CWF.c  Cluster_DFT_NonCol_DMmu.c  Cluster_DFT_ON2.c  DFT.c  DIIS_Mixing_Rhok.c  Divide_Conquer_LNO.c  DosMain.c  EigenValue_Problem.c  Eigen_lapack3.c  Electric_Polarization_BandCol.c  Electric_Polarization_BandNonCol.c  FT_NLP.c  FT_PAO.c  FT_ProExpn_VNA.c  FT_ProductPAO.c  FT_VNA.c  FermiLoop.c  Force.c  Force_test.c  Free_Arrays.c  (+90 more)
scripts/: extract_keywords.py
slurm_scripts/: run_gnu.sh  run_gnu_4.0.sh  run_intel.sh  run_intel_4.0.sh
tests/: conftest.py  test_database.py  test_generator.py  test_integration.py  test_parsers.py  test_vasp2omx.py  test_writers.py
(+76 files in other folders)
